--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   books:
-    title: 'Books'
+    title: 'Reviews and Books Chapters'
   manuscripts:
     title: 'Journal Articles'    
   conferences:
